sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: type inverse
  var boolean: inverse=true 
               ^AlgBubbleSort1:10: error: not found: value inverse
   	}while(inverse==true)
               ^